# geokube

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Dockerfile.base  README.md  environment.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.json
.github/workflows/: build-push-docker-base.yml  build-push-docker-prod.yml  build-push-docker.yml  build-push-docker_pr.yml  build-push-docker_release.yml  main.yml  pypi_publish.yml  testpypi_publish.yml  unit_tests.yml
cluster_tests/: datasets_conf.py  test_open_subset.py
conda/: build_and_install.sh  meta.yaml
docs/: about.md  axis.md  coord_system.md  crs.md  datamodel.md  domain.md  feature.md  field.md  index.md
examples/: example.ipynb
examples/hvplot/: era5-simple-points.ipynb
examples/plot/: eobs-simple.ipynb  era5-simple-points.ipynb  era5-simple.ipynb  ocean-simple.ipynb  plotting_projections_and_features.ipynb  plotting_regular_grid.ipynb  plotting_rotated_pole.ipynb  plotting_rotated_pole_simple.ipynb
examples/regrid/: blacksea-regrid.ipynb  era5-regrid.ipynb  vhr-era5-regrid.ipynb
examples/resample/: eobs-dds-resample.ipynb  era5-dds-resample.ipynb  era5-resample.ipynb  era5-vhr-resample.ipynb
geokube/: __init__.py  test_open.py  version.py
geokube/backend/: __init__.py  base.py  netcdf.py  zarr.py  zip.py
geokube/core/: aux.py  axis.py  bounds.py  cell_method.py  cell_methods.py  cfobject.py  cfobject_mixin.py  collection.py  coord_system.py  coordinate.py  crs.py  cube.py  datacube.py  dataset.py  dimension.py  domain.py  domainmixin.py  enums.py  errs.py  feature copy.py  feature.py  field.py  indexers.py  indexes.py  points.py  quantity.py  unit.py  units.py  variable.py
geokube/drivers/: _aux.py  api.py  argo.py  cfnetcdf.py  common.py  drivers.py  sentinel.py  sentinel2.py
geokube/static/units/: units_def.txt
geokube/utils/: __init__.py  attrs_encoding.py  decorators.py  exceptions.py  formatting.py  formatting_html.py  hcube_logger.py  log_utils.py  serialization.py  type_utils.py  util_methods.py  warnings.py  xarray_parser.py
tests/: __init__.py
tests/backend/: test_netcdf.py
tests/core/: test_axis.py  test_coordinate.py  test_coordinate_system.py  test_crs.py  test_datacube.py  test_dataset.py  test_dimension.py  test_domain.py  test_field.py  test_unit.py  test_variable.py
tests/fixtures/: __init__.py  features.py  shapes.py  xarray.py
tests/resources/: globe-era5-single-levels-reanalysis.nc  nemo_ocean_16.nc  point_domain.nc  res.nc
