# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [build-system]
# requires = ["setuptools>=64.0"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"

[project]
name = "geokube"
version = "0.3.0a0"
authors = [
    {name = "geokube Contributors", email = "geokube@googlegroups.com"}
]
maintainers = [
    {name = "geokube Contributors", email = "geokube@googlegroups.com"}
]
description = "a Python package based on xarray for GeoScience Data Analysis"
keywords = ["Earth science", "data analysis"]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "cf-xarray>=0.8.4",
    "dask>=2023.6.0",
    "gsw",
    "matplotlib>=3.5",
    "netcdf4",
    "numpy>=1.25",
    "pandas>=2.0",
    "pint>=0.20",
    "pint-xarray>=0.3",
    "pyproj>=3.4",
    "shapely>=2.0",
    "xarray>=2023.6.0",
]

[project.urls]
Homepage = "https://github.com/geokube/geokube"
Documentation = "https://geokube.github.io"
Repository = "https://github.com/CMCC-Foundation/geokube.git"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
geo_science = ["gsw>=3.6", "shapely>=2.0"]
regridding = ["xesmf"]
